--- a/.github/workflows/develop-build.yml
+++ b/.github/workflows/develop-build.yml
@@ -80,6 +80,7 @@ jobs:
         name: build-develop-linux
         path: |
           Release/Carbon.DebugUnix.tar.gz
+          Release/.tmp/DebugUnix/build-unix.info
 
   build-windows:
     name: 🪟 Windows
@@ -112,6 +113,7 @@ jobs:
         name: build-develop-windows
         path: |
           Release/Carbon.Debug.zip
+          Release/.tmp/Debug/build.info
 
   release:
     name: 💾 Release
@@ -163,6 +165,8 @@ jobs:
         files: |
           Release/build-develop-windows/Carbon.Debug.zip
           Release/build-develop-linux/Carbon.DebugUnix.tar.gz
+          Release/build-develop-linux/build-unix.info
+          Release/build-develop-windows/build.info
 
   commitrelease:
     name: 💾 Commit Release
@@ -212,3 +216,5 @@ jobs:
         files: |
           Release/build-develop-windows/Carbon.Debug.zip
           Release/build-develop-linux/Carbon.DebugUnix.tar.gz
+          Release/build-develop-linux/build-unix.info
+          Release/build-develop-windows/build.info
