--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -26,6 +26,9 @@
 		<!-- Required by Carbon's Database support -->
 		<PackageReference Include="MySql.Data" Version="8.0.31" />
 		<PackageReference Include="System.IO.Compression" Version="4.3.0" />
+
+		<!-- Miscellaneous -->
+		<PackageReference Include="QRCoder" Version="1.4.3" />
 	</ItemGroup>
 
 	<Target Name="CarbonRelease" AfterTargets="CarbonPrepareRelease">
