(re)organization of the directory structure

--- a/Carbon.Core/.msbuild/Metadata.props
+++ b/Carbon.Core/.msbuild/Metadata.props
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<Choose>
-		<When Condition="Exists('$(SolutionDir)$(Product)\bin\.gitag')">
+		<When Condition="Exists('$(MSBuildProjectDirectory)\bin\.gitag')">
 			<PropertyGroup>
-				<InformationalVersion>$(VersionPrefix)-$(VersionSuffix)$([System.IO.File]::ReadAllText('$(SolutionDir)$(Product)\bin\.gitag').Trim())</InformationalVersion>
+				<InformationalVersion>$(VersionPrefix)-$(VersionSuffix)$([System.IO.File]::ReadAllText('$(MSBuildProjectDirectory)\bin\.gitag').Trim())</InformationalVersion>
 			</PropertyGroup>
 		</When>
 		<Otherwise>
