--- a/Carbon.Core/Carbon.Hooks/Carbon.Hooks.Extended/Carbon.Hooks.Extended.csproj
+++ b/Carbon.Core/Carbon.Hooks/Carbon.Hooks.Extended/Carbon.Hooks.Extended.csproj
@@ -5,12 +5,12 @@
 		<ProjectGuid>{28195F54-F8A2-49D6-AE91-033D078502AD}</ProjectGuid>
 	</PropertyGroup>
 
-	<Import Project="..\.msbuild\Common.props" />
-	<Import Project="..\.msbuild\ReferencesRust.props" />
+	<Import Project="..\..\.msbuild\Common.props" />
+	<Import Project="..\..\.msbuild\ReferencesRust.props" />
 
 	<ItemGroup>
 		<!-- Carbon platform -->
-		<ProjectReference Include="..\Carbon\Carbon.csproj" Private="false" />
+		<ProjectReference Include="..\..\Carbon\Carbon.csproj" Private="false" />
 
 		<!-- Assembly patcher -->
 		<PackageReference Include="Lib.Harmony" Version="2.2.2" />
@@ -18,12 +18,5 @@
 
 	<Target Name="CarbonRelease" AfterTargets="CarbonPrepareRelease">
 		<Copy SourceFiles="$(OutputPath)$(Product).dll" DestinationFolder="$(c_hooks)" />
-	</Target>
-
-	<Target Name="AfterResolveReferences">
-		<!-- Redefine referencepath to add dependencies-->
-		<ItemGroup>
-			<ReferencePath Include="@(ReferenceDependencyPaths)"></ReferencePath>
-		</ItemGroup>
 	</Target>
 </Project>
