--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -31,6 +31,12 @@
 		<PackageReference Include="QRCoder" Version="1.4.3" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="src\Carbon\Base\" />
+	  <Folder Include="src\Carbon\Components\" />
+	  <Folder Include="src\Carbon\Hooks\" />
+	</ItemGroup>
+
 	<Target Name="CarbonRelease" AfterTargets="CarbonPrepareRelease">
 		<Copy SourceFiles="$(OutputPath)$(Product).dll" DestinationFolder="$(c_managed)" />
 	</Target>
