--- a/Carbon.Core/Carbon.SDK/Carbon.SDK.csproj
+++ b/Carbon.Core/Carbon.SDK/Carbon.SDK.csproj
@@ -8,6 +8,7 @@
 	<Import Project="..\.msbuild\Common.props" />
 
 	<ItemGroup>
+	  <Folder Include="src\Contracts\" />
 	</ItemGroup>
 
 	<Target Name="CarbonRelease" AfterTargets="CarbonPrepareRelease">
