--- a/.github/workflows/production-build.yml
+++ b/.github/workflows/production-build.yml
@@ -82,8 +82,8 @@ jobs:
       with:
         name: build-production-linux
         path: |
-          Release/Carbon.ReleaseUnix.tar.gz
-          Release/build-unix.info
+          Release/Carbon.Linux.Release.tar.gz
+          Release/Carbon.Linux.Release.info
 
   build-windows:
     name: 🪟 Windows
@@ -117,8 +117,8 @@ jobs:
       with:
         name: build-production-windows
         path: |
-          Release/Carbon.Release.zip
-          Release/build.info
+          Release/Carbon.Windows.Release.zip
+          Release/Carbon.Windows.Release.info
 
   release:
     name: 💾 Release
@@ -159,7 +159,7 @@ jobs:
           
           ${{ needs.build-linux.outputs.build_info }}
         files: |
-          Release/build-production-windows/Carbon.Release.zip
-          Release/build-production-linux/Carbon.ReleaseUnix.tar.gz
-          Release/build-production-linux/build-unix.info
-          Release/build-production-windows/build.info
+          Release/build-production-windows/Carbon.Linux.Release.info
+          Release/build-production-windows/Carbon.Linux.Release.tar.gz
+          Release/build-production-windows/Carbon.Windows.Release.info
+          Release/build-production-windows/Carbon.Windows.Release.zip
