--- a/.github/workflows/staging-build.yml
+++ b/.github/workflows/staging-build.yml
@@ -43,6 +43,7 @@ jobs:
           echo "tag=$(date +'%Yd%j')" >> $GITHUB_OUTPUT
           echo "ref=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
+  # BUILD LINUX ----------------------------------------------------------------
   build-linux:
     name: 🐧 Linux
     needs: bootstrap
@@ -80,8 +81,9 @@ jobs:
         name: build-staging-linux
         path: |
           Release/Carbon.Linux.Debug.tar.gz
-          Release/Carbon.Linux.Debug.tar.info
+          Release/Carbon.Linux.Debug.info
 
+  # BUILD WINDOWS --------------------------------------------------------------
   build-windows:
     name: 🪟 Windows
     needs: bootstrap
@@ -116,6 +118,7 @@ jobs:
           Release/Carbon.Windows.Debug.zip
           Release/Carbon.Windows.Debug.info
 
+  # RELEASE --------------------------------------------------------------------
   release:
     name: 💾 Release
     needs: [ "build-linux", "build-windows" ]
