--- a/Carbon.Core/Carbon.Hooks/Carbon.Hooks.Extra/Carbon.Hooks.Extra.csproj
+++ b/Carbon.Core/Carbon.Hooks/Carbon.Hooks.Extra/Carbon.Hooks.Extra.csproj
@@ -13,7 +13,7 @@
 		<ProjectReference Include="..\..\Carbon\Carbon.csproj" Private="false" />
 
 		<!-- Assembly patcher -->
-		<PackageReference Include="Lib.Harmony" Version="2.2.2" />
+		<PackageReference Include="HarmonyX" Version="2.10.1" />
 	</ItemGroup>
 
 	<Target Name="CarbonRelease" AfterTargets="CarbonPrepareRelease">
