Removed OnServerCommand from Extra/Carbon (integrated internal hook) Marked the Scripts plugin package as non-core so it shows up in the c.plugins list Don't show core plugin package on c.plugins

--- a/Carbon.Core/Carbon.Hooks/Carbon.Hooks.Extra/Carbon.Hooks.Extra.csproj
+++ b/Carbon.Core/Carbon.Hooks/Carbon.Hooks.Extra/Carbon.Hooks.Extra.csproj
@@ -16,6 +16,10 @@
 		<PackageReference Include="Lib.Harmony" Version="2.2.2" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="src\Carbon\Console\" />
+	</ItemGroup>
+
 	<Target Name="CarbonRelease" AfterTargets="CarbonPrepareRelease">
 		<Copy SourceFiles="$(OutputPath)$(Product).dll" DestinationFolder="$(c_hooks)" />
 	</Target>
