Adds support for patching generics

--- a/Tools/Helpers/doorstop_config.ini
+++ b/Tools/Helpers/doorstop_config.ini
@@ -1,3 +1,12 @@
 [General]
 enabled = true
+ignore_disable_switch=false
 target_assembly = carbon/managed/Carbon.Preloader.dll
+
+[UnityMono]
+debug_enabled=false
+debug_suspend=false
+debug_address=127.0.0.1:55555
+
+[Il2Cpp]
+# Not used
