--- a/.github/workflows/develop-build.yml
+++ b/.github/workflows/develop-build.yml
@@ -210,7 +210,7 @@ jobs:
           The general public is advised to use one of the [stable] builds.
 
           ### How to install
-          1. Download the `Carbon.Debug[Unix]` archive from the attachments below.
+          1. Download the `Carbon.[Windows|Linux].Debug` archive from the attachments below.
           2. Unzip the archive to the root of your Rust Dedicated Server.
           3. Restart the server and enjoy.
           
