--- a/.github/workflows/production-build.yml
+++ b/.github/workflows/production-build.yml
@@ -156,7 +156,7 @@ jobs:
           This build is targeted at the general public.
 
           ### How to install
-          1. Download the `Carbon.Release[Unix].zip` archive from the attachments below.
+          1. Download the `Carbon.[Windows|Linux].Release.zip` archive from the attachments below.
           2. Unzip the archive to the root of your Rust Dedicated Server.
           3. Restart the server and enjoy.
           
