--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -9,13 +9,17 @@
 	<Import Project="..\.msbuild\ReferencesRust.props" />
 
 	<ItemGroup>
-		<PackageReference Include="Ben.Demystifier" Version="0.4.1" />
 		<PackageReference Include="Lib.Harmony" Version="2.2.2" />
-		<PackageReference Include="MySql.Data" Version="8.0.32" />
-		<PackageReference Include="protobuf-net.Core" Version="3.1.17" />
-		<PackageReference Include="protobuf-net" Version="3.1.17" />
+		<PackageReference Include="Ben.Demystifier" Version="0.4.1" />
+		<PackageReference Include="MySql.Data" Version="8.0.32.1" />
+		<PackageReference Include="PolySharp" Version="1.12.1">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="protobuf-net.Core" Version="3.2.12" />
+		<PackageReference Include="protobuf-net" Version="3.2.12" />
 		<PackageReference Include="QRCoder" Version="1.4.3" />
-		<PackageReference Include="Roslynator.CSharp" Version="4.1.1" />
+		<PackageReference Include="Roslynator.CSharp" Version="4.2.0" />
 		<PackageReference Include="SharpCompress" Version="0.32.2" />
 		<PackageReference Include="System.IO.Compression" Version="4.3.0" />
 		<PackageReference Include="WebSocketSharp-netstandard" Version="1.0.1" />
