Shitload of work in one commit

--- a/Carbon.Core/Carbon.Hooks/Carbon.Hooks.Base/Carbon.Hooks.Base.csproj
+++ b/Carbon.Core/Carbon.Hooks/Carbon.Hooks.Base/Carbon.Hooks.Base.csproj
@@ -7,6 +7,7 @@
 
 	<Import Project="..\..\.msbuild\Common.props" />
 	<Import Project="..\..\.msbuild\ReferencesRust.props" />
+	<Import Project="..\..\.msbuild\AssemblyName.props" />
 
 	<ItemGroup>
 		<!-- Carbon platform -->
