--- a/Carbon.Core/Carbon.Ext.Discord/Carbon.Ext.Discord.csproj
+++ b/Carbon.Core/Carbon.Ext.Discord/Carbon.Ext.Discord.csproj
@@ -6,6 +6,7 @@
 
 	<Import Project="..\.msbuild\Common.props" />
 	<Import Project="..\.msbuild\ReferencesRust.props" />
+	<Import Project="..\.msbuild\AssemblyName.props" />
 
 	<ItemGroup>
 		<PackageReference Include="WebSocketSharp-netstandard" Version="1.0.1" />
@@ -13,10 +14,6 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-	</ItemGroup>
-
-	<ItemGroup>
-		<Reference Include="$(SolutionDir)..\Rust\$(OperatingSystem)\RustDedicated_Data\Managed\UnityEngine.CoreModule.dll" Private="false" />
 	</ItemGroup>
 
 	<Target Name="CarbonRelease" AfterTargets="CarbonPrepareRelease">
