--- a/Carbon.Core/Carbon.Hooks/Carbon.Hooks.Extra/Carbon.Hooks.Extra.csproj
+++ b/Carbon.Core/Carbon.Hooks/Carbon.Hooks.Extra/Carbon.Hooks.Extra.csproj
@@ -7,6 +7,7 @@
 
 	<Import Project="..\..\.msbuild\Common.props" />
 	<Import Project="..\..\.msbuild\ReferencesRust.props" />
+	<Import Project="..\..\.msbuild\AssemblyName.props" />
 
 	<ItemGroup>
 		<!-- Carbon platform -->
@@ -17,7 +18,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="src\Carbon\Console\" />
+		<Folder Include="src\Carbon\Console\" />
 	</ItemGroup>
 
 	<Target Name="CarbonRelease" AfterTargets="CarbonPrepareRelease">
