--- a/Carbon.Core/Carbon.Modules/Carbon.Modules.csproj
+++ b/Carbon.Core/Carbon.Modules/Carbon.Modules.csproj
@@ -6,6 +6,7 @@
 
 	<Import Project="..\.msbuild\Common.props" />
 	<Import Project="..\.msbuild\ReferencesRust.props" />
+	<Import Project="..\.msbuild\AssemblyName.props" />
 
 	<ItemGroup>
 		<Reference Include="$(SolutionDir)..\Rust\$(OperatingSystem)\RustDedicated_Data\Managed\UnityEngine.CoreModule.dll" Private="false" />
