--- a/Carbon.Core/.msbuild/Configurations.props
+++ b/Carbon.Core/.msbuild/Configurations.props
@@ -12,6 +12,10 @@
 				<DefineConstants>$(DefineConstants)</DefineConstants>
 				<Optimize>true</Optimize>
 				<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+				
+				<!-- We want to override corelib to have the new lang features -->
+                <WarningsNotAsErrors>CS1685</WarningsNotAsErrors>
+                <NoWarn>CS1685</NoWarn>
 			</PropertyGroup>
 		</When>
 		<Otherwise>
@@ -22,6 +26,8 @@
 				<DefineConstants>DEBUG;UNITY_ASSERTIONS;$(DefineConstants)</DefineConstants>
 				<Optimize>false</Optimize>
 				<TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+                <!-- We want to override corelib to have the new lang features -->
+                <NoWarn>CS1685</NoWarn>
 			</PropertyGroup>
 		</Otherwise>
 	</Choose>
