--- a/.github/workflows/develop-build.yml
+++ b/.github/workflows/develop-build.yml
@@ -137,7 +137,7 @@ jobs:
       working-directory: Release
         
     - name: 🗑️ Delete existing release tag
-      uses: dev-drprasad/delete-tag-and-release@v0.2.0
+      uses: dev-drprasad/delete-tag-and-release@92d94d77429cb0436597047a92369526a5824f50
       with:
         delete_release: true
         tag_name: develop_build
@@ -188,7 +188,7 @@ jobs:
       working-directory: Release
         
     - name: 🗑️ Delete existing release tag
-      uses: dev-drprasad/delete-tag-and-release@v0.2.0
+      uses: dev-drprasad/delete-tag-and-release@92d94d77429cb0436597047a92369526a5824f50
       with:
         delete_release: true
         tag_name: commit_build
