--- a/.github/workflows/production-build.yml
+++ b/.github/workflows/production-build.yml
@@ -131,11 +131,6 @@ jobs:
     if: ${{ (github.event_name == 'push') || (github.event_name == 'workflow_dispatch') || (github.event_name == 'schedule' && needs.build-linux.outputs.wipe == 'true') }}
 
     steps:
-    - name: ⬇️ Download artifacts
-      uses: actions/download-artifact@v3
-      with:
-        path: Release/
-        
     - name: 🗑️ Delete existing release tag
       uses: dev-drprasad/delete-tag-and-release@92d94d77429cb0436597047a92369526a5824f50
       with:
@@ -143,6 +138,15 @@ jobs:
         tag_name: production_build
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: ⬇️ Download artifacts
+      uses: actions/download-artifact@v3
+      with:
+        path: Release/
+        
+    - name: Display structure of downloaded files
+      run: ls -R
+      working-directory: Release
 
     - name: 🏷️ Update release tag
       uses: softprops/action-gh-release@d4e8205d7e959a9107da6396278b2f1f07af0f9b
