--- a/.github/workflows/staging-build.yml
+++ b/.github/workflows/staging-build.yml
@@ -125,11 +125,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: ⬇️ Download artifacts
-      uses: actions/download-artifact@v3
-      with:
-        path: Release/
-        
     - name: 🗑️ Delete existing release tag
       uses: dev-drprasad/delete-tag-and-release@92d94d77429cb0436597047a92369526a5824f50
       with:
@@ -137,6 +132,15 @@ jobs:
         tag_name: staging_build
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: ⬇️ Download artifacts
+      uses: actions/download-artifact@v3
+      with:
+        path: Release/
+        
+    - name: Display structure of downloaded files
+      run: ls -R
+      working-directory: Release
 
     - name: 🏷️ Update release tag
       uses: softprops/action-gh-release@d4e8205d7e959a9107da6396278b2f1f07af0f9b
