--- a/Carbon.Core/Carbon.Preloader/Carbon.Preloader.csproj
+++ b/Carbon.Core/Carbon.Preloader/Carbon.Preloader.csproj
@@ -5,10 +5,9 @@
 		<ProjectGuid>{6F8322EF-79DA-478B-B39C-EAC40771A46F}</ProjectGuid>
 	</PropertyGroup>
 
-	<Import Project="..\.msbuild\Common.props" />
+	<Import Project="$(SolutionDir)\.msbuild\Common.props" />
 
 	<ItemGroup>
-		<!-- Assembly editor -->
 		<PackageReference Include="Mono.Cecil" Version="0.11.4" />
 	</ItemGroup>
 
