--- a/Carbon.Core/Carbon.SDK/Carbon.SDK.csproj
+++ b/Carbon.Core/Carbon.SDK/Carbon.SDK.csproj
@@ -5,7 +5,7 @@
 		<ProjectGuid>{50B851B5-BF90-4856-91D7-FDB4848AC8F7}</ProjectGuid>
 	</PropertyGroup>
 
-	<Import Project="..\.msbuild\Common.props" />
+	<Import Project="$(SolutionDir)\.msbuild\Common.props" />
 
 	<ItemGroup>
 		<Folder Include="src\Contracts\" />
