Adds CarbonProtocol to msbuild

--- a/Carbon.Core/.msbuild/Common.props
+++ b/Carbon.Core/.msbuild/Common.props
@@ -17,9 +17,19 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
+		<!--
+			THIS IS AN IMPORTANT FEATURE
+			This property should change everytime there are breaking changes on
+			carbon that forces the users to update all the compontents at the
+			same time, like updating core and hooks in one shot.
+		-->
+		<CarbonProtocol>20230319</CarbonProtocol>
+	</PropertyGroup>
+
+	<PropertyGroup>
 		<AssemblyName>$(Product)</AssemblyName>
 		<AssemblyVersion>$(Version)</AssemblyVersion>
-		<FileVersion>$(VersionPrefix)</FileVersion>
+		<FileVersion>$(CarbonProtocol)</FileVersion>
 		<Version>0.$([System.DateTime]::UtcNow.ToString('yy.MMdd')).$([System.DateTime]::UtcNow.ToString('HHmm'))</Version>
 		<VersionPrefix>$([System.DateTime]::UtcNow.ToString("yyyy.MM.dd.HHmm"))</VersionPrefix>
 		<VersionSuffix>$(Configuration)</VersionSuffix>
