--- a/Carbon.Core/.msbuild/Common.props
+++ b/Carbon.Core/.msbuild/Common.props
@@ -23,7 +23,7 @@
 			carbon that forces the users to update all the compontents at the
 			same time, like updating core and hooks in one shot.
 		-->
-		<CarbonProtocol>20230320</CarbonProtocol>
+		<CarbonProtocol>2023.03.20.0</CarbonProtocol>
 	</PropertyGroup>
 
 	<PropertyGroup>
