--- a/Carbon.Core/Carbon.SDK/Carbon.SDK.csproj
+++ b/Carbon.Core/Carbon.SDK/Carbon.SDK.csproj
@@ -7,6 +7,11 @@
 
 	<Import Project="$(SolutionDir)\.msbuild\Common.props" />
 
+	<ItemGroup>
+		<Reference Include="$(SolutionDir)..\Rust\$(OperatingSystem)\RustDedicated_Data\Managed\UnityEngine.dll" Private="false" />
+		<Reference Include="$(SolutionDir)..\Rust\$(OperatingSystem)\RustDedicated_Data\Managed\UnityEngine.CoreModule.dll" Private="false" />
+	</ItemGroup>
+
 	<Target Name="CarbonRelease" AfterTargets="CarbonPrepareRelease">
 		<Copy SourceFiles="$(OutputPath)$(Product).dll" DestinationFolder="$(c_managed)" />
 	</Target>
