--- a/Carbon.Core/.msbuild/Configurations.props
+++ b/Carbon.Core/.msbuild/Configurations.props
@@ -13,6 +13,9 @@
 				<Optimize>true</Optimize>
 				<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
 
+				<!-- Release version schema: 0.2023.3.2815 -->
+				<Version>0.$([System.DateTime]::UtcNow.ToString('yyyy.MM.ddHH'))</Version>
+
 				<!-- We want to override corelib to have the new lang features -->
 				<WarningsNotAsErrors>CS1685</WarningsNotAsErrors>
 				<NoWarn>CS1685</NoWarn>
@@ -26,6 +29,9 @@
 				<DefineConstants>DEBUG;UNITY_ASSERTIONS;$(DefineConstants)</DefineConstants>
 				<Optimize>false</Optimize>
 				<TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+
+				<!-- Debug version schema: 2023.3.28.1542 -->
+				<Version>$([System.DateTime]::UtcNow.ToString('yyyy.MM.dd.HHmm'))</Version>
 
 				<!-- We want to override corelib to have the new lang features -->
 				<NoWarn>CS1685</NoWarn>
