Update csproj files

--- a/Carbon.Core/Carbon.Ext.Discord/Carbon.Ext.Discord.csproj
+++ b/Carbon.Core/Carbon.Ext.Discord/Carbon.Ext.Discord.csproj
@@ -13,7 +13,7 @@
 		<ProjectReference Include="$(SolutionDir)\Carbon.Common\Carbon.Common.csproj" Private="false" />
 	</ItemGroup>
 
-	<Target Name="CarbonRelease" AfterTargets="CarbonPrepareRelease">
+	<Target Name="CustomRelease" AfterTargets="Build" DependsOnTargets="PrepareRelease">
 		<Copy SourceFiles="$(OutputPath)$(Product).dll" DestinationFolder="$(c_ext)" />
 	</Target>
 </Project>
