--- a/Carbon.Core/Carbon.Bootstrap/Carbon.Bootstrap.csproj
+++ b/Carbon.Core/Carbon.Bootstrap/Carbon.Bootstrap.csproj
@@ -14,7 +14,7 @@
 		<PackageReference Include="Mono.Cecil" Version="0.11.4" Aliases="MonoCecilStandalone" />
 	</ItemGroup>
 
-	<Target Name="CarbonRelease" AfterTargets="CarbonPrepareRelease">
+	<Target Name="CustomRelease" AfterTargets="Build" DependsOnTargets="PrepareRelease">
 		<Copy SourceFiles="$(OutputPath)$(Product).dll" DestinationFolder="$(c_managed)" />
 	</Target>
 </Project>
