--- a/Carbon.Core/.msbuild/Metadata.props
+++ b/Carbon.Core/.msbuild/Metadata.props
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+	<!-- 
+		Sets the version based on the env context
+	-->
+	<PropertyGroup Condition="'$(ForceVersion)' != ''">
+		<Version>$(ForceVersion)</Version>
+	</PropertyGroup>
+
 	<PropertyGroup>
 		<AssemblyName>$(Product)</AssemblyName>
 		<AssemblyVersion>$(Version)</AssemblyVersion>
